--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -7,38 +7,25 @@
     <script defer data-domain="beneluxcs.nl" src="https://analytics.beneluxcs.nl/js/script.file-downloads.hash.outbound-links.tagged-events.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
+    <!-- CSS: Bootstrap, Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css">
 
-    <!-- Bootstrap and icon fonts -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-      crossorigin="anonymous"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-      crossorigin="anonymous"
-    />
-    <link 
-      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.0/font/bootstrap-icons.css" 
-      rel="stylesheet"
-    />
+    <!-- CSS: DataTables, Daterangepicker, Bootstrap Select -->
+    <link href="https://cdn.datatables.net/v/bs5/dt-2.3.4/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/cc-1.1.0/fc-5.0.5/fh-4.0.3/r-3.0.6/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.0/sr-1.4.2/datatables.min.css" rel="stylesheet" integrity="sha384-cqV69OaDubyp7ZbVI2ap4sM2oVenQw56aYor7qVdt3SeNmRh+ER48zELgNmgPuiT" crossorigin="anonymous">
+    
+    <link href="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.css" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/css/bootstrap-select.min.css" rel="stylesheet">
 
-    <!-- Custom styles -->
+    <!-- Custom base CSS -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base/darkmode.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/base/lightmode.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/base.css') }}">
-    
     <link rel="stylesheet" href="{{ url_for('static', filename='css/components/flags_filter.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/components/navbar.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/components/footer.css') }}">
 
-    <link href="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/css/tom-select.css" rel="stylesheet" />
-    
     {% block extra_css %}{% endblock %}
 
     <title>{% block title %}Home{% endblock %}</title>
@@ -134,15 +121,24 @@
       </div>
     </footer>
 
-    <!-- JQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-    <!-- Bootstrap 5 JS Bundle (includes Popper) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/tom-select@2.2.2/dist/js/tom-select.complete.min.js"></script>
+  <!-- JS: jQuery first -->
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
 
-  {% block javascript %}
-    <script src="{{ url_for('static', filename='js/darkmode.js') }}"></script>
-    <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
-  {% endblock %}
+  <!-- JS: Bootstrap Bundle -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+
+  <!-- JS: Core Plugins -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap-select@1.14.0-beta3/dist/js/bootstrap-select.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
+  <script src="https://cdn.datatables.net/v/bs5/dt-2.3.4/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/cc-1.1.0/fc-5.0.5/fh-4.0.3/r-3.0.6/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.0/sr-1.4.2/datatables.min.js" integrity="sha384-KN0jHdzhFu43Kc+CvHGtiJxoKNvZGY118F7v22BuvGFNLFQVkOzkVIwaWn1ayase" crossorigin="anonymous"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
+
+  <!-- Custom base JS -->
+  <script src="{{ url_for('static', filename='js/darkmode.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/navbar.js') }}"></script>
+
+  {% block javascript %}{% endblock %}
   </body>
 </html>
