--- a/BeneluxWebb/static/css/components/filters/filter_indicators.css
+++ b/BeneluxWebb/static/css/components/filters/filter_indicators.css
@@ -3,6 +3,7 @@
     display: flex;
     align-items: center;
     gap: 8px;
+    box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.2)
 }
 
 .filter-indicator {
