--- a/BeneluxWebb/static/css/components/navbar.css
+++ b/BeneluxWebb/static/css/components/navbar.css
@@ -67,6 +67,15 @@
   display: block;
 }
 
+.nav-logo-text {
+  margin-left: 10px;
+  font-family: DM Sans, sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 800;
+  font-style: normal;
+  font-size: 30px;
+}
+
 /* === Navbar links (items) === */
 .nav-links{
   display: flex;
