--- a/BeneluxWebb/static/css/pages/esea/esea_card_details.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_card_details.css
@@ -27,6 +27,8 @@
     justify-content: flex-start;
     align-items: center;
 
+    background-color: var(--card-bg-secondary);
+
     width: 100%;
     max-width: 500px;
     
