--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -7,6 +7,11 @@
     <script defer data-domain="beneluxcs.nl" src="https://analytics.beneluxcs.nl/js/script.file-downloads.hash.outbound-links.tagged-events.js"></script>
     <script>window.plausible = window.plausible || function() { (window.plausible.q = window.plausible.q || []).push(arguments) }</script>
 
+    <!-- CSS: Google fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap" rel="stylesheet">
+
     <!-- CSS: Bootstrap, Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" crossorigin="anonymous">
@@ -37,11 +42,14 @@
       <div class="container-fluid navbar-container">
         <nav class="container-boxed navbar-boxed">
           <div class="nav-mobile-top">
-            <div class="nav-logo">
-              <a class="nav-logo-small" href="/">
+            <a class="nav-logo" href="/">
+              <div class="nav-logo-small">
                 <img src="{{ url_for('static', filename='img/beneluxcs_logo.png') }}" alt="Logo" loading="lazy">
-              </a>
-            </div>
+              </div>
+              <span class="nav-logo-text">
+                BENELUXCS
+              </span>
+            </a>
 
             <div class="hamburger">
               <div class="line1"></div>
@@ -132,6 +140,7 @@
   <script src="https://cdn.jsdelivr.net/npm/moment@2.29.4/moment.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/daterangepicker/daterangepicker.min.js"></script>
   <script src="https://cdn.datatables.net/v/bs5/dt-2.3.4/b-3.2.5/b-colvis-3.2.5/b-html5-3.2.5/cc-1.1.0/fc-5.0.5/fh-4.0.3/r-3.0.6/sc-2.4.3/sb-1.8.4/sp-2.3.5/sl-3.1.0/sr-1.4.2/datatables.min.js" integrity="sha384-KN0jHdzhFu43Kc+CvHGtiJxoKNvZGY118F7v22BuvGFNLFQVkOzkVIwaWn1ayase" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.6.2/dist/fuse.min.js"></script>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.7.1/nouislider.min.js"></script>
 
