--- a/BeneluxWebb/templates/stats/stats.html
+++ b/BeneluxWebb/templates/stats/stats.html
@@ -5,6 +5,7 @@
 {% import "macros/filters/filter_group.html" as filter_group %}
 {% import "macros/filters/select_picker.html" as select_picker %}
 {% import "macros/filters/countries_filter.html" as countries_filter %}
+{% import "macros/filters/search_box.html" as search_box %}
 
 {% block title %}Stats - BeneluxCS{% endblock %}
 
@@ -15,10 +16,12 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/filter_group.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/filter_indicators.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/flags_filter.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/search_box.css') }}">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/stats/stats.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/stats/stats_filters.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/stats/stats_table.css') }}">
+
 {% endblock %}
 
 {% block content %}
@@ -84,33 +87,18 @@
                         <span class="arrow"></span>
                     </div>
                     <div class="filter-body">
-                        {{ filter_group.checkbox_filter("stages", filter_options["stages"]) }}
+                        {{ filter_group.checkbox_filter("stages", ["Regular Season", "Playoffs"]) }}
                     </div>
                 </div>
 
-                <div class="filter-container" data-filter-name="timestamp">
+                <div class="filter-container open" data-filter-name="timestamp">
                     <div class="filter-header">
                         <span>Timestamp</span>
                         <span class="filter-indicator"></span>
                         <span class="arrow"></span>
                     </div>
                     <div class="filter-body">
-                        <div class="date_filter" id="dateFilter">
-                            <i class="fa fa-calendar"></i>&nbsp;
-
-                            <div class="date_filter_label">
-                                Select date range
-                            </div>
-
-                            <div class="date_filter_dates">
-                                <span class="date_filter_start">
-                                </span>
-
-                                <span class="date_filter_end">
-                                </span>
-                            </div>
-                            <span></span>
-                        </div>
+                        {{ filter_group.radio_filter("timestamp", ["All Time", "This Week", "Last Week", "This Month", "Last Month", "Last 3 Months", "Last 6 Months", "This Year"], "All Time") }}
                     </div>
                 </div>
 
@@ -125,6 +113,18 @@
                     </div>
                 </div>
 
+                <div class="filter-container" data-filter-name="teams">
+                    <div class="filter-header">
+                        <span>Teams</span>
+                        <span class="filter-indicator"></span>
+                        <span class="arrow"></span>
+                    </div>
+                    <div class="filter-body">
+                        {{ search_box.search_box("teams", "Search teams", filter_options["teams"]) }}
+                    </div>
+                </div>
+
+
                 <div class="apply-button-container">
                     <button class="apply-button">Apply Filters</button>
                 </div>
@@ -136,7 +136,7 @@
     </div>
 
     <div class="stats-wrapper">
-        <table id="stats-data-table">
+        <table id="stats-data-table" class="table table-striped table-hover align-middle table-sm">
             <!-- DataTable will be initialized here -->
         </table>
     </div>
@@ -145,60 +145,9 @@
 
 {% block javascript %}
 {{ super() }}
-<script>
-$(function() {
-    var start = null;
-    var end = null;
-
-    function updateLabel(startDate, endDate) {
-        if (startDate && endDate) {
-            // If a range is selected, show the dates
-            $('#dateFilter .date_filter_label').hide();
-            $('#dateFilter .date_filter_start').html(startDate.format('DD-MM-YYYY'));
-            $('#dateFilter .date_filter_end').html(endDate.format('DD-MM-YYYY'));
-        } else {
-            // If no selection, show placeholder text
-            $('#dateFilter .date_filter_label').show();
-            $('#dateFilter .date_filter_start').html('');
-            $('#dateFilter .date_filter_end').html('');
-        }
-    }
-
-    $('#dateFilter').daterangepicker({
-        "showDropdowns": true,
-        "alwaysShowCalendars": true,
-        ranges: {
-            'This Week': [moment().startOf('week'), moment().endOf('week')],
-            'Last Week': [moment().subtract('1', 'week').startOf('week'), moment().subtract('1', 'week').endOf('week')],
-            'Last 30 Days': [moment().subtract(29, 'days'), moment()],
-            'This Month': [moment().startOf('month'), moment().endOf('month')],
-            'Last Month': [moment().subtract(1, 'month').startOf('month'), moment().subtract(1, 'month').endOf('month')],
-            'Last 3 Months': [moment().subtract(3, 'month').startOf('month'), moment().endOf('month')],
-            'Last 6 Months': [moment().subtract(6, 'month').startOf('month'), moment().endOf('month')],
-            'This Year': [moment().startOf('year'), moment().endOf('year')],
-            'All Time': [moment('2000-01-01'), moment()],
-        }
-    }, updateLabel);
-
-    // Filter hook
-    $('#dateFilter').on('apply.daterangepicker', function(ev, picker) {
-        start = picker.startDate;
-        end = picker.endDate;
-
-        if (picker.chosenLabel === 'All Time') {
-            $('#dateFilter .date_filter_label').text('All Time').show();
-            $('#dateFilter .date_filter_start').html('');
-            $('#dateFilter .date_filter_end').html('');
-        } else {
-            $('#dateFilter .date_filter_label').hide();
-            $('#dateFilter .date_filter_start').html(start.format('DD-MM-YYYY'));
-            $('#dateFilter .date_filter_end').html(end.format('DD-MM-YYYY'));
-        }
-    });
-});
-</script>
 
 <!-- Stats.js -->
+<script src="{{ url_for('static', filename='js/datetime.js') }}"></script>
 <script src="{{ url_for('static', filename='js/stats.js') }}"></script>
 <script src="{{ url_for('static', filename='js/filter_ui.js') }}"></script>
 {% endblock %}
