--- a/BeneluxWebb/templates/base.html
+++ b/BeneluxWebb/templates/base.html
@@ -67,7 +67,7 @@
             <li><a href="/leaderboard">Leaderboard</a></li>
           </ul>
 
-          <div class="darkmode-toggle">
+          <!-- <div class="darkmode-toggle">
             
             <input type="checkbox" class="checkbox" id="darkModeToggle">
             
@@ -77,7 +77,7 @@
               <span class="ball"></span>
             </label>
 
-          </div>
+          </div> -->
         </nav>
       </div>
 
@@ -95,8 +95,8 @@
       <div class="container-boxed footer-boxed">
         <!-- Social & Project Info -->
         <div class="contact-links mb-3">
-          <p class="mb-3">
-            Contact me:  
+          <div class="mb-3">
+            <span>Contact me: </span> 
             <a href="https://discordapp.com/users/228206535405207552" class="icon-box" target="_blank" rel="noopener" title="Discord">
               <i class="bi bi-discord"></i>
             </a>
@@ -106,17 +106,17 @@
             <a href="https://steamcommunity.com/id/Fowlz1/" class="icon-box" target="_blank" rel="noopener" title="Steam">
               <i class="bi bi-steam"></i>
             </a>
-          </p>
-          <p class="mb-1">
+          </div>
+          <div class="mb-1">
             <a href="https://github.com/KG-Schouten/BeneluxCS" target="_blank" rel="noopener" title="GitHub Repo">
               <i class="bi bi-github"></i> View source on GitHub
             </a>
-          </p>
-          <p class="mb-0">
+          </div>
+          <div class="mb-0">
             <a href="https://discord.gg/9xzsGTGhjm" target="_blank" rel="noopener" title="Join our Discord">
               <i class="bi bi-discord"></i> Join the Benelux Discord
             </a>
-          </p>
+          </div>
         </div>
 
         <!-- Licensing Note -->
