--- a/BeneluxWebb/templates/stats/stats.html
+++ b/BeneluxWebb/templates/stats/stats.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/filter_indicators.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/flags_filter.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/search_box.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/components/filters/select_picker.css') }}">
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/stats/stats.css') }}">
 <link rel="stylesheet" href="{{ url_for('static', filename='css/pages/stats/stats_filters.css') }}">
