--- a/BeneluxWebb/static/css/components/match_box.css
+++ b/BeneluxWebb/static/css/components/match_box.css
@@ -3,11 +3,15 @@
   width: 100%;
 
   padding: 3px;
+  margin-top: 2px;
 
-  border: 2px solid var(--border);
+  background-color: var(--secondary30);
+  border-radius: var(--border-radius-sm);
+
+  border: 1px solid var(--border);
 }
 .sidebar-match-box:hover {
-  background-color: var(--secondary1);
+  background-color: rgba(0,0,0,0.3);
 }
 
 .sidebar-match-box .match-top {
