--- a/BeneluxWebb/static/css/components/navbar.css
+++ b/BeneluxWebb/static/css/components/navbar.css
@@ -11,16 +11,16 @@
   position: fixed;
   top: 0; left: 0; right: 0;
   height: var(--navbar-height);
-  border-bottom: 1px solid var(--static);
+  border-bottom: 1px solid var(--border);
   z-index: 9999;
   
   display: flex;
   align-items: flex-start;
 
   background-color: var(--background);
-  background-image: -webkit-linear-gradient(180deg, var(--background) 0%, var(--primary1) 100%);
+  /* background-image: -webkit-linear-gradient(180deg, var(--background) 0%, var(--primary1) 100%);
   background-image: -moz-linear-gradient(180deg, var(--background) 0%, var(--primary1) 100%);
-  background-image: linear-gradient(180deg, var(--background) 0%, var(--primary1) 100%);
+  background-image: linear-gradient(180deg, var(--background) 0%, var(--primary1) 100%); */
 
   transition: background-color var(--transition-normal), box-shadow var(--transition-normal);
 }
@@ -32,7 +32,8 @@
   width: 100%;
   height: var(--navbar-height-inner);
   padding-inline: 0.5rem;
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
   align-items: center;
   transform: translateY(calc(0.5 * (var(--navbar-height) - var(--navbar-height-inner))));
   transition: transform 0.3s ease;
@@ -107,7 +108,8 @@
   bottom: 0;
   width: 0;
   height: 2px;
-  background: linear-gradient(to right, #F02629, #FFCD01 , #1B448C);
+  /* background: linear-gradient(to right, #F02629, #FFCD01 , #1B448C); */
+  background: var(--accent);
   transition: width 0.3s ease;
   transform: translateX(-50%);
 }
@@ -118,13 +120,13 @@
 }
 
 .nav-links li a.active {
-  color: var(--primary);
-  text-shadow: 0 0 8px rgba(212, 140, 6, 0.3);
+  /* color: var(--accent); */
+  text-shadow: 0px 0px 6px var(--accent);
 }
 
 .nav-links li a:hover {
-  color: var(--primary);
-  text-shadow: 0 0 8px rgba(212, 140, 6, 0.3);
+  /* color: var(--accent); */
+  text-shadow: 0px 0px 6px var(--accent);
 }
 
 /* === Dark mode toggle === */
