--- a/BeneluxWebb/static/css/pages/esea/esea_cards.css
+++ b/BeneluxWebb/static/css/pages/esea/esea_cards.css
@@ -23,8 +23,7 @@
 .division-separator {
   display: flex;
   flex-direction: row;
-  justify-content: between;
-  border-bottom: 2px solid var(--secondary);
+  border-bottom: 2px solid var(--accent);
   width: 100%;
 
   padding-inline: 10px;
@@ -41,10 +40,12 @@
   height: auto;
   position: relative;
   margin: 1rem auto;
-  padding: .5vw;
-  background-color: var(--card-bg);
-  color: var(--foreground);
+  padding: 8px;
+  background-color: var(--secondary30);
+  color: var(--text);
+
   border: var(--border) 1px solid;
+  border-radius: var(--border-radius);
 }
 
 .team-card-visible {
@@ -80,7 +81,7 @@
 .team-card-body .team-avatar img {
   width: 100%;
   height: 100%;
-  border-radius: 3px;
+  border-radius: var(--border-radius);
   object-fit: cover;
 }
 
@@ -141,13 +142,13 @@
   width: fit-content;
   height: 100%;
 
-  border: 2px solid var(--secondary);
-  border-radius: 4px;
+  border: 2px solid var(--border);
+  border-radius: var(--border-radius-sm);
 
   z-index: 10;
-  cursor: pointer;
+  cursor: default;
   background-color: transparent;
-  color: var(--foreground);
+  color: var(--text);
   transition: background-color 0.3s ease;
 }
 .stage-logo {
@@ -172,7 +173,7 @@
   
   font-size: 1.2rem;
   font-weight: bold;
-  color: var(--foreground);
+  color: var(--text);
 
   width: max-content;
   height: 100%;
@@ -204,6 +205,9 @@
 
   height: 100%;
 }
+.main-player:hover strong {
+  text-decoration: underline;
+}
 .main-player-avatar {
   display: flex;
   align-items: center;
@@ -224,7 +228,7 @@
   height: 100%;
   width: auto;
   aspect-ratio: 1 / 1;
-  border-radius: 4px;
+  border-radius: var(--border-radius-sm);
   object-fit: cover;
   max-width: 100%;
 }
@@ -245,7 +249,6 @@
   text-overflow: ellipsis;
   max-width: 100%;
   font-size: clamp(0.75rem, 1.5vw, 1rem);
-
 }
 .main-player-name img {
   width: clamp(14px, 2vw, 18px);
@@ -263,7 +266,7 @@
   height: calc(var(--team-card-height) * (1 - var(--score-boxes-height-scale)));
   width: calc(var(--players-box-width) * var(--players-sub-width-scale));
   
-  border-left: 1px solid var(--secondary);
+  border-left: 1px solid var(--border);
 
   padding-inline: 5px;
 
@@ -289,6 +292,9 @@
 
   overflow: hidden;
   gap: 2px;
+}
+.sub-player:hover span {
+  text-decoration: underline;
 }
 .sub-player span {
   white-space: nowrap;
@@ -324,10 +330,15 @@
   width: 100%;
   height: 100%;
 
-  background-color: var(--btn-bg);
-  color: var(--btn-text);
-  border-radius: 0.25rem;
+  background-color: rgba(0,0,0,.4);
+  border: 1px solid var(--border);
+  border-radius: var(--border-radius-sm);
+
+  color: var(--text);
   transition: background-color 0.3s ease, color 0.3s ease;
+}
+.details-btn button:hover {
+  background-color: var(--accent);
 }
 
 @media screen and (max-width: 992px) {
@@ -357,7 +368,7 @@
   .team-card-body .team-avatar img {
     width: 85%;
     height: 85%;
-    border-radius: 3px;
+    border-radius: var(--border-radius-sm);
     object-fit: cover;
   }
 
