--- a/BeneluxWebb/templates/macros/filters/select_picker.html
+++ b/BeneluxWebb/templates/macros/filters/select_picker.html
@@ -1,6 +1,5 @@
 {% macro select_picker_single(name, values) %}
 <select class="selectpicker" id="{{ name }}-select">
-
     {% for val in values %}
         <option>{{ val }}</option>
     {% endfor %}
@@ -8,8 +7,7 @@
 {% endmacro %}
 
 {% macro select_picker_multiple(name, values) %}
-<select class="selectpicker" id="{{ name }}-select" multiple>
-
+<select class="selectpicker" id="{{ name }}-select" multiple data-actions-box="true" data-size="5">
     {% for val in values %}
         <option>{{ val }}</option>
     {% endfor %}
