--- a/BeneluxWebb/static/css/components/filters/range_slider.css
+++ b/BeneluxWebb/static/css/components/filters/range_slider.css
@@ -1,18 +1,24 @@
 .range-slider-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
   width: 100%;
 }
 
 .range-slider {
   position: relative;
-  width: 100%;
-  height: 5px;
+  width: 90%;
+  height: 8px;
   margin: 15px 0;
-  background-color: var(--border);
+  background-color: var(--background-light);
+  border-radius: 4px;
 }
 .range-slider .slider-track {
   height: 100%;
   position: absolute;
   background-color: var(--accent);
+  border-radius: var(--border-radius);
 }
 .range-slider input {
   position: absolute;
@@ -26,29 +32,34 @@
 }
 
 .range-slider input[type="range"]::-webkit-slider-thumb {
-  width: 25px;
-  height: 25px;
-  border: 2px solid var(--border);
-  background-color: var(--secondary);
+  width: 15px;
+  height: 15px;
+
+  border: 2px solid 2px solid rgba(255,255,255,0.8);
+  background-color: var(--accent);
+  border-radius: 50%;
+
   pointer-events: auto;
   cursor: pointer;
   box-shadow: 0 .125rem .5625rem -0.125rem rgba(0,0,0,.2);
 }
 
 .range-slider input[type="range"]::-moz-range-thumb {
-  width: 25px;
-  height: 25px;
-  border: 2px solid var(--border);
-  background-color: var(--secondary);
+  width: 15px;
+  height: 15px;
+
+  border: 2px solid 2px solid rgba(255,255,255,0.8);
+  background-color: var(--accent);
+  border-radius: 50%;
+
   pointer-events: auto;
   cursor: pointer;
   box-shadow: 0 .125rem .5625rem -0.125rem rgba(0,0,0,.2);
 }
 
 .range-values {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    margin-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
 }
